--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         color: #ffffff;
         padding-inline: 6px;
         padding-block: 4px;
-        font-size: 16px;
+        font-size: 14px;
         display: flex;
         width: 30%;
         align-items: center;
@@ -134,30 +134,32 @@
   </head>
 
   <body>
-    <div class="card">
-      <h1>Cek Jodoh</h1>
-      <p>Masukkan nama</p>
-      <input type="text" id="nameInput" placeholder="Tulis Nama" />
-      <select id="genderInput">
-        <option value="male">Laki-laki</option>
-        <option value="female">Perempuan</option>
-      </select>
-      <button onclick="cekJodoh()">Cek Jodoh</button>
-      <div id="loading" class="loading-spinner" style="display: none"></div>
-      <button
-        onclick="resetForm()"
-        style="
-          padding-inline: 40px;
-          margin-top: 10px;
-          background-color: #ae445a;
-        "
-      >
-        Reset
-      </button>
-      <div id="result">
-        <h2 id="jodohName"></h2>
+    <form autocomplete="off">
+      <div class="card">
+        <h1>Cek Jodoh</h1>
+        <p>Masukkan nama</p>
+        <input type="text" id="nameInput" placeholder="Tulis Nama" />
+        <select id="genderInput">
+          <option value="male">Laki-laki</option>
+          <option value="female">Perempuan</option>
+        </select>
+        <button onclick="cekJodoh()">Cek Jodoh</button>
+        <div id="loading" class="loading-spinner" style="display: none"></div>
+        <button
+          onclick="resetForm()"
+          style="
+            padding-inline: 40px;
+            margin-top: 10px;
+            background-color: #ae445a;
+          "
+        >
+          Reset
+        </button>
+        <div id="result">
+          <h2 id="jodohName"></h2>
+        </div>
       </div>
-    </div>
+    </form>
     <script>
       function cekJodoh() {
         const nameInput = document.getElementById("nameInput").value;
