--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
   </head>
 
   <body>
-    <form autocomplete="off">
       <div class="card">
         <h1>Cek Jodoh</h1>
         <p>Masukkan nama</p>
-        <input type="text" id="nameInput" placeholder="Tulis Nama" />
+        <input type="text" id="nameInput" placeholder="Tulis Nama" autocomplete="new-name" />
         <select id="genderInput">
           <option value="male">Laki-laki</option>
           <option value="female">Perempuan</option>
@@ -159,7 +158,6 @@
           <h2 id="jodohName"></h2>
         </div>
       </div>
-    </form>
     <script>
       function cekJodoh() {
         const nameInput = document.getElementById("nameInput").value;
